# granulator

./: .gitignore  Cargo.toml  README.md
app-wasm/: Cargo.toml  README.md  canvas.js  index.html  index.js  package-lock.json  webpack.config.js
app-wasm/src/: lib.rs
app-wasm/static/: style.css
app_daisy/: Cargo.toml  Embed.toml
app_daisy/src/: main.rs
app_wasm/: Cargo.toml  README.md  canvas.js  index.html  index.js  package-lock.json  reverb.js
app_wasm/src/: lib.rs
app_wasm/static/: style.css
app_wav/: Cargo.toml
app_wav/src/: main.rs
daisy-looper/: Cargo.toml
freeverb/src/: all_pass.rs  comb.rs  delay_line.rs  freeverb.rs  lib.rs
granulator/: Cargo.toml
granulator/src/: constants.rs  delay_line.rs  frame.rs  grain.rs  granulator.rs  lib.rs  parabolic_envelope.rs  scheduler.rs
src/: granulator.rs  main.rs
