[package]
name = "granulator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasp = { version = "0.11", features = ["all"] }
anyhow = "1"
cpal = "0.12"
find_folder = "0.3"
hound = "3"
rand = "0.8.3"
