[workspace]
members = ["app_daisy", "app_wav", "app_wasm", "granulator", "freeverb"]

[profile.dev]
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size in flash
incremental = false
opt-level = "s"     # optimize for binary size

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size in flash
lto = true        # better optimizations
opt-level = "s"   # optimize for binary size
