[package]
name = "app_daisy"
version = "0.1.0"
edition = "2018"


[dependencies]
granulator = { path = "../granulator" }
cortex-m = "0.6.2"
cortex-m-rtic = "0.5.6"
log = "0.4.11"
stm32h7xx-hal = { version = "0.9.0", features = ["stm32h750v", "rt", "fmc"] }
libdaisy = { version = "0.1.0", features = [
    "log-rtt",
], git = "https://github.com/mtthw-meyer/libdaisy-rust.git" }
