[package]
name = "app_wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
granulator = { path = "../granulator" }
wasm-bindgen = "0.2.74"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.55"
web-sys = { version = "0.3.55", features = [
    'console',
]}
console_error_panic_hook = "0.1.7"